--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+
 .graphs{
   padding-top: 10%
+}
+
+.pageBreak{
+  margin-top: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  font-family: big john;
+  width: 100%;
+  height: 50vh;
+}
+
+.pb1{
+  background-image: url(../public/stocks.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  overflow : hidden;
+}
+
+.opacityLayer{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(115, 0, 0, 0.578)
+}
+
+.textLayer{
+  text-decoration: underline;
+  font-size: 64px;
+  padding: 5%;
+  text-align: center;
+  font-family: 'Righteous';
+  font-weight: bold;
+  color: white;
+  z-index: 10;
+}
+
+.para{
+  padding: 5%;
+  text-decoration: none;
+  font-family:'Courier New', Courier, monospace;
+  font-size: 28px;
+  color: white
 }
