--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,9 +31,17 @@
 }
 
 .textLayer{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction:column;
+
+}
+
+.header{
+  padding-top: 5%;
   text-decoration: underline;
   font-size: 64px;
-  padding: 5%;
   text-align: center;
   font-family: 'Righteous';
   font-weight: bold;
