--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,6 +35,7 @@
   justify-content: center;
   align-items: center;
   flex-direction:column;
+  box-sizing: border-box;
 
 }
 
@@ -76,5 +77,13 @@
 @media only screen and (max-width: 768px) {
   .para{
     font-size: 18px;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .header{
+    font-size: 24px;
+  }
+  .para{
+    font-size: 14px;
   }
 }
